--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# ide and platform specific
+.idea
+meowlike.sublime*
+.DS_Store
